--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,7 @@
 name: Gestion des pushs
 run-name: ${{ github.actor }} is testing out GitHub Actions 
 
-on:
-  push:
-    branches:
-      - 'test_github_actions'
+on: [push]
 
 jobs:
   build-and-test:
