--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Gestion des pushs
 run-name: ${{ github.actor }} is testing out GitHub Actions 
 
-on: [push]
+on: 
+    push:
+        branches: [master]
+
 
 jobs:
   build-and-test:
