--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,18 +40,20 @@ jobs:
           echo "CURRENT_DATE=$(date +'%Y-%m-%d-%H-%M-%S')" >> $GITHUB_ENV
       - name: Fusion sur le master ou création d'une branche d'erreur
         run: |
+          echo  "This is the branch name: " ${{ env.BRANCH_NAME }}
           if [ "${{ env.BRANCH_NAME }}" == "dev" ]; then
             git checkout master
           else
             echo "Already on dev branch, no action needed."
           fi
-          if [ "${{ job.status }}" == "success" ]; then
-            echo "Merging to dev branch..."
+          if [ "${{ needs.build-and-test.result }}" == "success" ]; then
+            echo "Merging to master branch..."
             git pull
             git merge --no-ff ${{ env.BRANCH_NAME }}
             git push origin master
           else
             echo "Tests failed, creating failure branch..."
+            git branch 
             git checkout -b "failures/${{ env.CURRENT_DATE }}" ${{ env.PREV_COMMIT }}
             git push origin "failures/${{ env.CURRENT_DATE }}"
           fi
