--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
           echo  "This is the branch name: " ${{ env.BRANCH_NAME }}
           if [ "${{ env.BRANCH_NAME }}" == "dev" ]; then
             git checkout -b master
+            git branch --set-upstream-to=origin/master master
           else
             echo "Already on dev branch, no action needed."
           fi
