--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           fi
           if [ "${{ needs.build-and-test.result }}" == "success" ]; then
             echo "Merging to master branch..."
-            git pull
+            git pull origin ${{ env.BRANCH_NAME }}
             git merge --no-ff ${{ env.BRANCH_NAME }}
             git push -u origin master
           else
