--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           if [ "${{ needs.build-and-test.result }}" == "success" ]; then
             echo "Merging to master branch..."
             git merge --no-ff ${{ env.BRANCH_NAME }}
-            git push -u origin master
+            git push --force origin master
           else
             echo "Tests failed, creating failure branch..."
             git checkout -b "failures/${{ env.CURRENT_DATE }}" ${{ env.PREV_COMMIT }}
