Changed if order

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,12 +46,12 @@ jobs:
           else
             echo "Already on dev branch, no action needed."
           fi
-          if [ "${{ needs.build-and-test.result }}" == "success" ]; then
-            echo "Merging to master branch..."
-            git merge --no-ff ${{ env.BRANCH_NAME }}
-            git push --force origin master
-          else
+          if [ "${{ needs.build-and-test.result }}" != "success" ]; then
             echo "Tests failed, creating failure branch..."
             git checkout -b "failures/${{ env.CURRENT_DATE }}" ${{ env.PREV_COMMIT }}
             git push --force origin "failures/${{ env.CURRENT_DATE }}"
+          else
+            echo "Merging to master branch..."
+            git merge --no-ff ${{ env.BRANCH_NAME }}
+            git push --force origin master
           fi
