Rajout du git reset dev

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,8 @@ jobs:
             echo "Tests failed, creating failure branch..."
             git checkout -b "failures/${{ env.CURRENT_DATE }}" ${{ env.PREV_COMMIT }}
             git push --force origin "failures/${{ env.CURRENT_DATE }}"
+            git checkout dev
+            git reset dev HEAD:{1}
           else
             echo "Merging to master branch..."
             git merge --no-ff ${{ env.BRANCH_NAME }}
