--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,8 @@ jobs:
             git checkout -b "failures/${{ env.CURRENT_DATE }}" ${{ env.PREV_COMMIT }}
             git push --force origin "failures/${{ env.CURRENT_DATE }}"
             git checkout dev
-            git reset --hard HEAD~
-            git push origin dev
+            git reset HEAD~
+            git push --force origin dev
           else
             echo "Merging to master branch..."
             git merge --no-ff ${{ env.BRANCH_NAME }}
