--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,7 @@ jobs:
             git checkout -b "failures/${{ env.CURRENT_DATE }}" ${{ env.PREV_COMMIT }}
             git push --force origin "failures/${{ env.CURRENT_DATE }}"
             git checkout dev
-            echo $HEAD
-            git reset ${{env.LAST_COMMIT}}
+            git reset dev~
             git push --force origin dev
           else
             echo "Merging to master branch..."
