--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
             git checkout -b "failures/${{ env.CURRENT_DATE }}" $GITHUB_SHA
             git push --force origin "failures/${{ env.CURRENT_DATE }}"
             git checkout dev
-            git reset dev "${GITHUB_SHA}~"
+            git reset "${GITHUB_SHA}^"
             git push --force origin dev
           else
             echo "Merging to master branch..."
