--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
 name: Gestion des pushs
-run-name: ${{ github.actor }} is testing out GitHub Actions 
+run-name: ${{ github.actor }} is testing out GitHub Actions
 
 on: 
-    push:
-        branches: [dev]
-
+  push:
+    branches: [dev]
 
 jobs:
   build-and-test:
@@ -12,10 +11,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Configuration de l'environnement python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: 3.11.5
+
       - name: Exécution des tests
         run: |
           python -m unittest discover tests/
@@ -27,36 +28,47 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Récupéraion du nom de la branche
-        id: get_branch_name
+
+      - name: Set up Git
         run: |
-          echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-      - name: Récupération du commit précédent
-        id: get_prev_commit
-        run: |
-          echo "PREV_COMMIT=$(git rev-parse ${GITHUB_SHA})" >> $GITHUB_ENV
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Récupération de la date actuelle
         id: get_current_date
         run: |
           echo "CURRENT_DATE=$(date +'%Y-%m-%d-%H-%M-%S')" >> $GITHUB_ENV
-      - name: Fusion sur le master ou création d'une branche d'erreur
+
+      - name: Fusion sur master ou création d'une branche d'erreur
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo  "This is the branch name: " ${{ env.BRANCH_NAME }}
-          if [ "${{ env.BRANCH_NAME }}" == "dev" ]; then
-            git checkout -b master
-          else
-            echo "Already on dev branch, no action needed."
-          fi
-          if [ "${{ needs.build-and-test.result }}" != "success" ]; then
-            echo "Tests failed, creating failure branch..."
-            git checkout -b "failures/${{ env.CURRENT_DATE }}" $GITHUB_SHA
-            git push --force origin "failures/${{ env.CURRENT_DATE }}"
+          if [ "${{ needs.build-and-test.result }}" == "success" ]; then
+            echo "Tests passed, merging to master..."
+            git checkout master
+            git merge dev
+            git push origin master
             git checkout dev
-            git reset dev "${GITHUB_SHA}^"
-            git show
-            git push --force origin dev
           else
-            echo "Merging to master branch..."
-            git merge --no-ff ${{ env.BRANCH_NAME }}
-            git push --force origin master
+            echo "Tests failed, creating failure branch..."
+            git checkout dev
+            git checkout -b "failures/${{ env.CURRENT_DATE }}"
+            git push origin "failures/${{ env.CURRENT_DATE }}"
+            echo "Reverting dev to last successful commit..."
+            LAST_GOOD_COMMIT=$(git rev-list --all --grep 'CI: Successful build' -n 1)
+            git reset --hard $LAST_GOOD_COMMIT
+            git push --force origin dev
           fi
+
+  mark-success:
+    needs: [build-and-test, merge-or-create-failure-branch]
+    if: success()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Mark commit as successful
+        run: |
+          echo "CI: Successful build" | git commit --allow-empty -F -
+          git push origin dev
