--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           if [ "${{ needs.build-and-test.result }}" == "success" ]; then
             echo "Tests passed, merging to master..."
-            git checkout master
+            git checkout -b master
             git merge dev
             git push origin master
             git checkout dev
