--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,9 @@ jobs:
             git push origin "failures/${{ env.CURRENT_DATE }}"
             echo "Reverting dev to last successful commit..."
             git checkout dev
-            LAST_GOOD_COMMIT=$(git rev-list --all --grep 'CI: Successful build' -n 1)
-            git reset --hard $LAST_GOOD_COMMIT
+            git reset --hard origin/dev
             git push --force origin dev
           fi
+
+
+        
