--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Récupère toutes les branches et tout l'historique
+          fetch-depth: 0
 
       - name: Set up Git
         run: |
@@ -41,7 +41,7 @@ jobs:
         run: |
           echo "CURRENT_DATE=$(date +'%Y-%m-%d-%H-%M-%S')" >> $GITHUB_ENV
 
-      - name: Fusion sur master ou création d'une branche d'erreur
+      - name: Merge or create feature branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -49,7 +49,7 @@ jobs:
             echo "Tests passed, merging to master..."
             git fetch origin
             git checkout master
-            git pull origin master  # Intègre les modifications de la branche master distante
+            git pull origin master
             git merge dev
             git push origin master
           else
