--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Configuration de l'environnement python
+      - name: Configuration of the python env
         uses: actions/setup-python@v2
         with:
           python-version: 3.x
 
-      - name: Exécution des tests
+      - name: Tests execution
         run: |
           python -m unittest discover tests/
 
